--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +20,9 @@
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
+    "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
