--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^10.8.5",
+    "leaflet": "^1.9.3",
     "pdfjs-dist": "^3.4.120",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
