--- a/package.json
+++ b/package.json
@@ -6,20 +6,18 @@
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^10.8.5",
+    "install": "^0.13.0",
+    "npm": "^9.6.4",
     "pdfjs-dist": "^3.4.120",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
