--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "swiper": "^9.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
